[project]
name = "homework-20250217"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey",email = "sgudkovv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
