[project]
name = "homework-20250217"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey",email = "sgudkovv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
